Update stylesheet links and fix logo image path in home page

--- a/pages/home.html
+++ b/pages/home.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="../assets/css/global.css"/>
-    <link rel="stylesheet" href="../assets/css/home.css" />
+    <link rel="stylesheet" href="../sass/style.css"/>
     <link
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,400;0,600;1,400&display=swap"
       rel="stylesheet"
@@ -15,7 +14,7 @@
   <nav class="navbar">
     <div class="navbar__left">
       <div class="navbar__logo-group">
-        <a href="#"><img src="/assets/css/media/logo.svg" alt="logo-telovendo" class="navbar__logo-icon"></a>
+        <a href="#"><img src="../assets/" alt="logo-telovendo" class="navbar__logo-icon"></a>
         <span class="navbar__brand"><a href="#">Te lo Vendo</a></span>
       </div>
       <div class="navbar__menu">
