Add SVG icons and update logo path in home page

--- a/pages/home.html
+++ b/pages/home.html
@@ -14,7 +14,7 @@
   <nav class="navbar">
     <div class="navbar__left">
       <div class="navbar__logo-group">
-        <a href="#"><img src="../assets/" alt="logo-telovendo" class="navbar__logo-icon"></a>
+        <a href="#"><img src="../assets/media/logo.svg" alt="logo-telovendo" class="navbar__logo-icon"></a>
         <span class="navbar__brand"><a href="#">Te lo Vendo</a></span>
       </div>
       <div class="navbar__menu">
@@ -29,15 +29,15 @@
     <div class="navbar__right">
       <div class="navbar__search">
         <div class="navbar__search-icon-box">
-          <img src="../assets/css/media/lupa.svg" alt="lupa" class="navbar__search-icon">
+          <img src="../assets/media/lupa.svg" alt="lupa" class="navbar__search-icon">
         </div>
         <span class="navbar__search-text">Search</span>
       </div>
       <div class="navbar__cart">
-        <img src="../assets/css/media/carrito.svg" alt="carrito" class="navbar__cart-icon">
+        <img src="../assets/media/carrito.svg" alt="carrito" class="navbar__cart-icon">
       </div>
       <div class="navbar__user">
-        <img src="../assets/css/media/user.png" alt="" class="navbar__user-avatar">
+        <img src="../assets/media/user.png" alt="" class="navbar__user-avatar">
       </div>
     </div>
   </nav>
