se agrega links de html a todos los navs para navegacion correcta

--- a/pages/home.html
+++ b/pages/home.html
@@ -19,7 +19,7 @@
       </div>
       <div class="navbar__menu">
         <ul class="navbar__links">
-          <li class="navbar__item"><a href="#" class="navbar__link">Home</a></li>
+          <li class="navbar__item"><a href="./home.html" class="navbar__link">Home</a></li>
           <li class="navbar__item"><a href="./catalog.html" class="navbar__link">Shop</a></li>
           <li class="navbar__item"><a href="./about.html" class="navbar__link">About</a></li>
           <li class="navbar__item"><a href="./detail.html" class="navbar__link">Contact</a></li>
