--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -25,7 +25,7 @@
         <div class="navbar__menu">
           <ul class="navbar__links">
             <li class="navbar__item">
-              <a href="#" class="navbar__link">Home</a>
+              <a href="./home.html" class="navbar__link">Home</a>
             </li>
             <li class="navbar__item">
               <a href="./catalog.html" class="navbar__link">Shop</a>
